Homestay Section Update

--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@
           <div class="row justify-content-center">
             <div class="col-8 d-flex flex-column align-items-center flex-lg-row justify-content-lg-between menu-container">
               <div class="menu1 mt-2">
-                <a href="#" class="homestays-link menu-links">Homestays</a>
+                <a href="./homestays.html" class="homestays-link menu-links">Homestays</a>
               </div>
               <div class="menu2 mt-2">
-                <a href="#" class="boutiques menu-links">Boutiques</a>
+                <a href="./boutiques.html" class="boutiques menu-links">Boutiques</a>
               </div>
               <div class="menu3 mt-2">
-                <a href="#" class="attractions-link menu-links">Attractions</a>
+                <a href="./attractions.html" class="attractions-link menu-links">Attractions</a>
               </div>
               <div class="menu4 mt-2">
-                <a href="#" class="city-tours-link menu-links">City Tours</a>
+                <a href="./citytours.html" class="city-tours-link menu-links">City Tours</a>
               </div>
             </div>
           </div>
@@ -127,7 +127,7 @@
                 Homestays
               </h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quam accusantium incidunt reprehenderit assumenda nostrum dignissimos a cumque perspiciatis ipsam accusamus distinctio, illum, eaque illo? Voluptates harum id ullam incidunt quaerat accusantium doloribus nisi aperiam eos quidem consequatur excepturi, quos voluptatum nemo maxime tenetur cum eum doloremque impedit sapiente modi!</p>
-              <button class="homestay-button story-button">
+              <button onclick="window.location.href='./homestays.html'" class="homestay-button story-button">
                 Expolre...
               </button>
             </div>
@@ -187,7 +187,7 @@
             </div>
             <div class="even-story-div2 col-12 col-lg-7">
               <h2 class="d-none d-lg-block city-tours-topic">
-                Botiques
+                City Tours
               </h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quam accusantium incidunt reprehenderit assumenda nostrum dignissimos a cumque perspiciatis ipsam accusamus distinctio, illum, eaque illo? Voluptates harum id ullam incidunt quaerat accusantium doloribus nisi aperiam eos quidem consequatur excepturi, quos voluptatum nemo maxime tenetur cum eum doloremque impedit sapiente modi!</p>
               <button class="city-tours-button story-button">
