--- a/janaki_location.html
+++ b/janaki_location.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/sections.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/sections.css">
+  <link rel="stylesheet" href="./css/sub_sections.css">
+  <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body id="body" onload="startFunction()">
     <main>
@@ -95,36 +97,48 @@
       <section class="navigation-panel">
         <div class="container">
             <div class="d-flex justify-content-start navigation-panel-links">
-                <a href="./index.html">Home</a>&nbsp;&nbsp;<i class="fas fa-greater-than"></i>&nbsp;&nbsp;<a href="./homestays.html">Homestays</a>
+                <a href="./index.html">Home</a>&nbsp;&nbsp;<i class="fas fa-greater-than"></i>&nbsp;&nbsp;<a href="./homestays.html">Homestays</a>&nbsp;&nbsp;<i class="fas fa-greater-than"></i>&nbsp;&nbsp;<a href="./janaki.html">Janaki's Home</a>
             </div>
         </div>
       </section>
 
-      <section class="homestay-section">
+      <section class="janaki-homestay">
         <div class="container">
-            <div class="row d-flex flex-column flex-lg-row justify-content-around mt-5">
-                <div class="col-12 col-lg-3 border border-dark main-image-grid">
-                    <div class="image-grid homestay-image-grid1">
-                    </div>
-                    <h3 class="pt-2">Janaki's Home</h3>
-                    <a href="./janaki.html" class="pt-5 image-grid-link">See more</a>&nbsp;&nbsp;<i class="fas fa-greater-than"></i>
-                </div>
-                <div class="col-12 col-lg-3 border border-dark main-image-grid">
-                    <div class=" image-grid homestay-image-grid2">    
-                    </div>
-                    <h3 class="pt-2">Home Lanka</h3>
-                    <a href="./homelanka.html" class="pt-5 image-grid-link">See more</a>&nbsp;&nbsp;<i class="fas fa-greater-than"></i>
-                </div>
-                <div class="col-12 col-lg-3 border border-dark main-image-grid">
-                    <div class="image-grid homestay-image-grid3">
-                    </div>
-                    <h3 class="pt-2">Come Stay</h3>
-                    <a href="./comestay.html" class="pt-5 image-grid-link">See more</a>&nbsp;&nbsp;<i class="fas fa-greater-than"></i>
-                </div>
+          <div class="row d-flex flex-column-reverse flex-lg-row my-5">
+            <div class="col-12 col-lg-6">
+              <div class="row">
+                <h2 class="d-none d-lg-block text-center janaki-home-header">Janaki's Home</h2>
+              </div>
+              <div class="row">
+                <ul>
+                  <li> <a href="janaki.html" id="home">About</a></li>
+                  <li> <a href="janaki_rooms.html">Rooms</a></li>
+                  <li> <a class="active" href="janaki_location.html">Location</a></li>
+                  <li> <a href="janaki_book.html">Book</a></li>
+                </ul>
+              </div>
+              <div class="row px-1">
+                Text for location description. Can also chane images
+              </div>
+              <button class="janaki-map-button" onclick="window.location.href='https://goo.gl/maps/JBQB8oiTkoL1xAiW7'">
+                Find Us on Maps
+              </button>
             </div>
-            <button class="homestay-seemore">
-                See More
-            </button>
+            <div class="col-12 col-lg-6">
+              <h2 class="d-lg-none text-center janaki-home-header">Janaki's Home</h2>
+              <div class="janaki-image-grid mb-5">
+                <div>
+                  <img class="janaki-images janaki-image1" src="./images/janaki1.jpg" alt="">
+                </div>
+                <div>
+                  <img class="janaki-images janaki-image1" src="./images/janaki2.jpg" alt="">
+                </div>
+                <div>
+                  <img class="janaki-images janaki-image1" src="./images/janaki3.jpg" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -135,6 +149,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="./js/dynamic.js"></script>
   </body>
 </html>
