--- a/homestays.html
+++ b/homestays.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
-<body id="body" onload="startFunction()">
+<body>
     <main>
 
       <section id="hidden-menu-section">
@@ -60,9 +60,9 @@
               </div>
               <nav class="d-none d-lg-flex flex-column justify-content-start col-lg-7">
                 <div class="d-flex justify-content-end ">
-                  <button class="button1">
-                    Register your property
-                  </button>
+                   <button onclick="window.location.href='./register_property.html'" class="button1">
+          Register your property
+        </button>
                   <button class="button3">
                     Help
                   </button>
@@ -135,6 +135,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
-    <script src="./js/dynamic.js"></script>
+    <script src="./js/dynamic_noflickity.js"></script>
   </body>
 </html>
