--- a/janaki.html
+++ b/janaki.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
-<body id="body" onload="startFunction()">
+<body>
     <main>
 
       <section id="hidden-menu-section">
@@ -62,9 +62,9 @@
               </div>
               <nav class="d-none d-lg-flex flex-column justify-content-start col-lg-7">
                 <div class="d-flex justify-content-end ">
-                  <button class="button1">
-                    Register your property
-                  </button>
+                   <button onclick="window.location.href='./register_property.html'" class="button1">
+          Register your property
+        </button>
                   <button class="button3">
                     Help
                   </button>
@@ -102,6 +102,10 @@
         </div>
       </section>
 
+      <section id="hidden-section" class="hidden-section">
+
+      </section>
+
       <section class="janaki-homestay">
         <div class="container">
           <div class="row d-flex flex-column-reverse flex-lg-row my-5">
@@ -123,7 +127,7 @@
             </div>
             <div class="col-12 col-lg-6">
               <h2 class="d-lg-none text-center janaki-home-header">Janaki's Home</h2>
-              <div class="janaki-image-grid mb-5">
+              <div id="janaki-image-grid" class="janaki-image-grid mb-5">
                 <div>
                   <img class="janaki-images janaki-image1" src="./images/janaki1.jpg" alt="">
                 </div>
