--- a/janaki_location.html
+++ b/janaki_location.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
-<body id="body" onload="startFunction()">
+<body>
     <main>
 
       <section id="hidden-menu-section">
@@ -62,9 +62,9 @@
               </div>
               <nav class="d-none d-lg-flex flex-column justify-content-start col-lg-7">
                 <div class="d-flex justify-content-end ">
-                  <button class="button1">
-                    Register your property
-                  </button>
+                   <button onclick="window.location.href='./register_property.html'" class="button1">
+          Register your property
+        </button>
                   <button class="button3">
                     Help
                   </button>
@@ -100,6 +100,10 @@
                 <a href="./index.html">Home</a>&nbsp;&nbsp;<i class="fas fa-greater-than"></i>&nbsp;&nbsp;<a href="./homestays.html">Homestays</a>&nbsp;&nbsp;<i class="fas fa-greater-than"></i>&nbsp;&nbsp;<a href="./janaki.html">Janaki's Home</a>
             </div>
         </div>
+      </section>
+
+      <section id="hidden-section" class="hidden-section">
+
       </section>
 
       <section class="janaki-homestay">
